added to text adventure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <h1>Jason Ward</h1>
         <h6>*content commented out*</h6>
-        <!--<table>
+        <table>
             <tr>
                 <td><img src="images/landfriedAndI.jpg" alt="Me" class=rotateImg180></td>
                 <td><img src="images/[3]myCode.jpg" alt="My Code"></td>
@@ -33,7 +33,7 @@
                 <td>A screenshot of my code.</td>
                 <td>My dogs.</td>
             </tr>
-        </table>-->
+        </table>
 
         <script>
             var num;
