added images to text adventure

--- a/textAdventure.html
+++ b/textAdventure.html
@@ -33,7 +33,7 @@
             {
                 position:absolute;
                 top:0px;
-                bottom:50px;
+                bottom:200px;
                 left:56%;
                 right:0px;
                 /*display:flex;   //comment/uncomment for collumns instead of paragraphs
@@ -43,7 +43,7 @@
             #choices
             {
                 position:absolute;
-                bottom:0px;
+                bottom:75px;
                 left:56%;
                 right:0px;
                 height:50px;
@@ -124,7 +124,7 @@
 
             function intro()
             {
-                pic.src = "images/woods.jpg";
+                pic.src = "images/partIntro.jpg";
                 ptext1.innerHTML = "Bob is a singer. Bob is tired of paparazzi always following him around.";
                 ptext2.innerHTML = "";
                 ptext3.innerHTML = "";
@@ -140,7 +140,7 @@
             }
             function part7()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part7.png";
                 ptext1.innerHTML = "Bob lives happily ever after.";
                 ptext2.innerHTML = "";
                 ptext3.innerHTML = "";
