finished text adventure, added to about me & resume

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,6 +3,14 @@
     <head>
         <title>Home</title>
         <link rel="stylesheet" type"text/css" href="style.css">
+
+        <style>
+            img
+            {
+                max-width: 200px;
+            }
+        </style>
+
     </head>
     <body>
         <ul class=navbar>
@@ -25,17 +33,22 @@
             <tr>
                 <td style="vertical-align:top"><img src="images/me.jpg" alt="Me"></td>
                 <td>
-
-                    My career goal is to have a successful career in an industry I have
-                    not yet chosen. I want to enjoy my job. I will go to a four-year
-                    university if I get in to one. I want to go to college because it
-                    is expected of California students.
+                    My career goal is to be in one of the sciences, whether it is 
+                    computer science, aeronautical science, or zoological science. 
+                    I want to enjoy my job. To achieve this goal, I will go to a four-year
+                    university. I want to go to college because I enjoy learning. I enjoy logical thinking so a 
+                    career in science would make sense for me.
                     <br><br>
                     I am punctual, resourseful and responsible. These strengths will
-                    help me in my career.
+                    help me in my career. I have demonstrated these traits in my academics
+                    and extracrurriculars.
                     <br><br>
-                    I have learned about myself from my experiences. I will work until
-                    I acheive what needs to be done. I am a fast learner.
+                    Most of my major accomplishments in High School come from extracurriculars.
+                    I am part of our successful marching band. Marching band has taught me how
+                    to be individually responsible, and how to work well with a team. I have
+                    also been part of a competitive robotics team. In four years we have been
+                    1st place three times, been 2nd once, and have been recognized for Judges'
+                    Choice three times.
                     <br><br>
                     Thank you for reading my About Me page. Please explore the rest of
                     my site.
