--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,11 @@
         <title>Home</title>
         <link rel="stylesheet" type="text/css" href="style.css">
 <style>
+    h1
+    {
+        margin-bottom:0;
+        padding-bottom:0;
+    }
     h3
     {
         line-height:0.50;
@@ -14,6 +19,11 @@
     {
         margin-top:4px;
         padding-top:0
+    }
+    table, tr, td
+    {
+        border-color:white;
+        background-color:white;
     }
 </style>
 
@@ -34,32 +44,68 @@
             </li>
         </ul>
 
-        <h1>Resume</h1>
+        <h1>Jason Ward</h1>
+        <h3>Resume</h3>
 
         <ul>
             <li><b>Career Goal or Objective</b></li>
                 <ul>
-                    <li>I want to have a successful career in a job I enjoy.</li>
+                    <li>To be in one of the following sciences: computer science, aeronautical science, or zoological science.</li>
                 </ul><br>
             <li><b>Education</b></li>
                 <ul>
-                    <li>Palm Desert High School, Palm Desert, California</li>
+                    <li>Palm Desert High School, Palm Desert, California (2018 - Present)</li>
                     <li>AP Computer Science Principles</li>
                 </ul><br>
             <li><b>Work/Volunteer Experience</b></li>
                 <ul>
-                    <li></li>
+                    <li>ZooTeen Volenteer, The Living Desert Zoo & Gardens (October 2019 - Present)</li>
+                        <ul>  
+                            <li>Provide guests with directions and information</li>
+                            <li>Oversee waste management in an animal care environment.</li>
+                            <li>Assist with Special Events and Private Functions.</li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul>
+                    <li>Dogsitter (2017 - Present)</li>
+                    <ul>
+                        <li>Feed and otherwise care for dogs</li>
+                    </ul>
                 </ul><br>
             <li><b>Skills (Languages/Certifications)</b></li>
                 <ul>
-                    <li>I am fluent in English and know some Spanish. I also can code in C, and some HTML and CSS.</li>
+                    <li>Fluent in English and some Spanish.</li>
+                    <li>Fluent coding in C, and some HTML and CSS.</li>
                 </ul><br>
             <li><b>Academic Highlights & Awards</b></li>
                 <ul>
-                    <li>I have been <i>Summa Cum Laude</i> with a 4.0 GPA or higher every applicable year every year.</li>
-                    <li>I am taking AP and Honors classes, incliuding AP Computer Science Principles.</li>
+                    <li><i>Summa Cum Laude</i> with a 4.0 GPA or higher every year.</li>
+                    <li>Taking all AP and Honors classes, including AP Computer Science Principles.</li>
+                </ul><br>
+            <li><b>Extracurricular Activities</b></li>
+                <ul>
+                    <li>Palm Desert Marching Aztecs (2018 - Present, Trumpet)</li>
+                    <li>Indoor Percussion (2018 - Present, Sythesizer)</li>
+                    <li>Aztec Botball Club, International Autonomous Robotics Tournament (2017 - Present)</li>
+                        <ul>
+                            <li>2019</li>
+                                <ul>
+                                    <li>1st Place, Curiosity Bracket</li>
+                                    <li>Judges' Choice: Outstanding Sub-System: 2019</li>
+                                </ul>
+                            <li>2018</li>
+                                <ul>
+                                    <li>1st Place, Opportunity Bracket
+                                    <li>Judges' Choice: Outstanding Use of Sensors: 2018</li>
+                                </ul>
+                            <li>2017</li>
+                                <ul>
+                                    <li>1st Place, Compensation Bracket</li>
+                                    <li>Judges' Choice: Outstanding Documentation</li>
+                                </ul>
+                        </ul>
                 </ul>
         </ul>
-
     </body>
 </html>
