--- a/textAdventure.html
+++ b/textAdventure.html
@@ -157,7 +157,7 @@
             }
             function part1()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part1.jpg";
                 ptext1.innerHTML = "Bob finds a girl that likes him but she is a bully so Bob doesn’t like her. However, she is tenacious and always follows Bob around. Her name is Cairo.";
                 ptext2.innerHTML = "Does Bob talk to her?";
                 ptext3.innerHTML = "";
@@ -173,7 +173,7 @@
             }
             function part2()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part2.png";
                 ptext1.innerHTML = "Bob tells her that he does not like her. ";
                 ptext2.innerHTML = "";
                 ptext3.innerHTML = "";
@@ -205,7 +205,7 @@
             }
             function part3()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part1.jpg";
                 ptext1.innerHTML = "[3] Then one day this one girl shows up and Bob likes her but she doesn’t know what Bob feels about her. Her name is Jhoana.";
                 ptext2.innerHTML = "Bob is new at school and wants people to like him. Cairo is in a group of popular kids and Bob knows that if he makes friends with her, he could be friends with anyone.  However, Bob does not think he wants to be friends with her.";
                 ptext3.innerHTML = "However, Jhoana is an outcast and after talking to her for awhile Bob realizes that she is poor. If Bob makes friends with her Bob will also have no friends but they will have each other, and Bob can already tell that they will like each other eventually.  ";
@@ -221,7 +221,7 @@
             }
             function part4()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part4.png";
                 ptext1.innerHTML = "[4] Because Bob values happiness over money, Bob chooses to reject Cairo and be friends with Jhoana. Cairo is jealous that Bob choses Jhoana over her so she makes it her mission to make Bob’s life miserable for the rest of the time Bob is at their school. Bob knows he only has one choice: Get rid of her. ";
                 ptext2.innerHTML = "Bob formulates a plan.";
                 ptext3.innerHTML = "";
@@ -237,8 +237,8 @@
             }
             function part5()
             {
-                pic.src = "images/[3]witch.jpg";
-                ptext1.innerHTML = "[5] Bob never sees her again. Bob and Jhoana become the most popular and well-liked students at the school. They get married years later.";
+                pic.src = "images/part12.png";
+                ptext1.innerHTML = "Bob never sees her again. Bob and Jhoana become the most popular and well-liked students at the school. They get married years later.";
                 ptext2.innerHTML = "";
                 ptext3.innerHTML = "";
                 ptext4.innerHTML = "";
@@ -253,9 +253,9 @@
             }
             function part6()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part6.png";
                 ptext1.innerHTML = "Bob does not talk to her.";
-                ptext2.innerHTML = "The bully follows Bob but Bob keeps ignoring her";
+                ptext2.innerHTML = "The bully follows Bob but Bob keeps ignoring her.";
                 ptext3.innerHTML = "Stay with the bully and be annoyed? ";
                 ptext4.innerHTML = "";
                 b1.innerHTML = "Yes";
@@ -269,23 +269,24 @@
             }
             function part10()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part10.png";
                 ptext1.innerHTML = "Bob is popular but miserable everyday.";
-                ptext2.innerHTML = "Does Bob stay friends with Cairo or dump her for Jhoana?";
+                ptext2.innerHTML = "";//Does Bob stay friends with Cairo or dump her for Jhoana?
                 ptext3.innerHTML = "";
                 ptext4.innerHTML = "";
-                b1.innerHTML = "Cairo";
-                b2.innerHTML = "Jhoana";
+                b1.innerHTML = "";//Cairo
+                b2.innerHTML = "";//Jhoana
                 b3.innerHTML = "";
                 b4.innerHTML = "";
                 b1.style.display = "block";
                 b2.style.display = "block";
                 b3.style.display = "none";
                 b4.style.display = "none";
+                alert("You've chosen the wrong path! Reload and try again.")
             }
             function part8()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part10.png";
                 ptext1.innerHTML = "Bob has many friends but is are unhappy.";
                 ptext2.innerHTML = "";
                 ptext3.innerHTML = "";
@@ -301,7 +302,7 @@
             }
             function part9()
             {
-                pic.src = "images/[3]witch.jpg";
+                pic.src = "images/part7.png";
                 ptext1.innerHTML = "Bob chose happiness over money and popularity. Bob and Jhoana live happily ever after.";
                 ptext2.innerHTML = "";
                 ptext3.innerHTML = "";
