fixed text adventure and resume

--- a/resume.html
+++ b/resume.html
@@ -89,21 +89,8 @@
                     <li>Indoor Percussion (2018 - Present, Sythesizer)</li>
                     <li>Aztec Botball Club, International Autonomous Robotics Tournament (2017 - Present)</li>
                         <ul>
-                            <li>2019</li>
-                                <ul>
-                                    <li>1st Place, Curiosity Bracket</li>
-                                    <li>Judges' Choice: Outstanding Sub-System: 2019</li>
-                                </ul>
-                            <li>2018</li>
-                                <ul>
-                                    <li>1st Place, Opportunity Bracket
-                                    <li>Judges' Choice: Outstanding Use of Sensors: 2018</li>
-                                </ul>
-                            <li>2017</li>
-                                <ul>
-                                    <li>1st Place, Compensation Bracket</li>
-                                    <li>Judges' Choice: Outstanding Documentation</li>
-                                </ul>
+                            <li>1st Place, three consecutive years</li>
+                            <li>Judges' Choice: Outstanding Sub-System (2019), Outstanding Use of Sensors (2018), Outstanding Documentation (2017)</li>
                         </ul>
                 </ul>
         </ul>
