--- a/textAdventure.html
+++ b/textAdventure.html
@@ -12,7 +12,7 @@
                 bottom:0px;
                 left:0px;
                 right:0px;
-                background-color:black;
+                background-color:white;
             }
             #leftPane
             {
@@ -43,22 +43,22 @@
             #choices
             {
                 position:absolute;
-                bottom:75px;
+                bottom:0px;
                 left:56%;
                 right:0px;
-                height:50px;
+                height:225px;
                 display:flex;
                 align-items:center;
                 justify-content:center;
-                background-color:black;
+                background-color:white;
             }
             #b1, #b2, #b3, #b4
             {
                 display:inline-block;
-                //background-color:#000033;//purple-orange
+                background-color:#000000;//purple-orange
                 //background:linear-gradient(white,black);
-                background: radial-gradient(rgba(0,0,224,1), rgba(0,0,0,0.1));
-                color:blue;
+                //background: radial-gradient(rgba(0,0,224,1), rgba(0,0,0,0.1));
+                color:white;
                 font-size:16px;
                 padding:10px;
                 margin:5px;
@@ -67,7 +67,7 @@
             }
             p
             {
-                color:blue;
+                color:black;
             }
         </style>
 
