--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
 
         <h1>Jason Ward</h1>
-        <h6>*content commented out*</h6>
+        <!--<h6>*content commented out*</h6>-->
         <table>
             <tr>
                 <td><img src="images/landfriedAndI.jpg" alt="Me" class=rotateImg180></td>
@@ -36,7 +36,7 @@
         </table>
 
         <script>
-            var num;
+            /*var num;
             var radius1;
             var radius2;
 
@@ -46,7 +46,7 @@
             radius1 = radius1 * radius1;
             alert(Math.PI * radius1);
             radius2 = radius2 * radius2;
-            alert(Math.PI * radius2);
+            alert(Math.PI * radius2);*/
 
 
             //take user's value as input
