added python project

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,7 +22,7 @@
                 <div>Projects</div>
                 <ul class=dropdown-content>
                     <li><a href="textAdventure.html">Text Adventure</a></li>
-                    <li><a href="project2.html">Project 2</a></li>
+                    <li><a href="pythonProject.html">Python Project</a></li>
                     <li><a href="project3.html">Project 3</a></li>
                 </ul>
             </li>
